kubernetes/member-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-service
  template:
    metadata:
      labels:
        app: member-service
    spec:
      containers:
        - name: member-service
          image: cs544/member-service:1.0-SNAPSHOT
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
