kubernetes/sport-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sport-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sport-service
  template:
    metadata:
      labels:
        app: sport-service
    spec:
      containers:
        - name: sport-service
          image: cs544/sport-service:1.0-SNAPSHOT
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
