kubernetes/streaming-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming-service
  template:
    metadata:
      labels:
        app: streaming-service
    spec:
      containers:
        - name: streaming-service
          image: cs544/streaming-service:1.0-SNAPSHOT
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
