kubernetes/mongodb-sport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-sport
spec:
  selector:
    app: mongodb-sport
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
