kubernetes/sport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sport-service
spec:
  selector:
    app: sport-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
