kubernetes/streaming-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-service
spec:
  selector:
    app: streaming-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
